feat: implemnting cqrs pattern